<resources>
    <string name="app_name">Ghla</string>
    <string name="app_title">Ghana Library Authority</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_in">Log In</string>
    <string name="full_name">full name</string>
    <string name="username">username</string>
    <string name="mainlogo">Main Logo</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_report">Reports</string>
    <string name="title_profile">Profile</string>

    <string name="TASK_MASTER">Task Master</string>
    <string name="LIBRARY_MANAGEMENT">Library Management</string>
    <string name="NOTIFICATIONS">Notifications</string>
    <string name="PROCESS_DOCS">Process Docs</string>
    <string name="REQUEST_SUPPORT">Request Support</string>
    <string name="MY_LIBRARY">My Library</string>
    <string name="HISTORY">History</string>

    <!--My Profile page-->
    <string name="TYPE_CURRENT_PASSWORD">Type your current password</string>
    <string name="TYPE_NEW_PASSWORD">Type your new password</string>
    <string name="RETYPE_NEW_PASSWORD">Retype your new password</string>
    <string name="CREATE_NEW_PASSWORD">Create a new password</string>
    <string name="CHOOSE_UNIQUE_PASSWORD">Choose a unique password to protect your account</string>
    <string name="FORGOT_PASSWORD">Forgot your password?</string>

    <string name="PRIMARY_EMAIL">Primary Email</string>
    <string name="CHANGE_EMAIL_ADDRESS">Change email address</string>
    <string name="CHOOSE_DIFFERENT_EMAIL">Choose a different e-mail address for your account</string>

    <string name="ADD_PHONE_NUMBER">Add a phone number</string>
    <string name="ADD_PHONE_NUMBER_TO_ACCOUNT">Add a phone number to your account</string>
    <string name="FRAGMENT_PASSWORD">password</string>
    <string name="FRAGMENT_PHONE">phone</string>
    <string name="FRAGMENT_EMAIL">email</string>
    <string name="submitMembershipReport">submitMembershipReport</string>

</resources>
