<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/mainlogo"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_ghana_logo" />

    <TextView
        android:id="@+id/logoTitle"
        android:layout_width="113dp"
        android:layout_height="93dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="8dp"
        android:text="Ghana Library Authority"
        android:textColor="@color/colorTextGreen"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/textview_gray"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/username_domain_com"
        android:textColorHint="@color/colorTextPlaceHolder"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/textview_gray"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:textColorHint="@color/colorTextPlaceHolder"
        app:layout_constraintBottom_toTopOf="@+id/fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/textview_gray"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        android:textColorHint="@color/colorTextPlaceHolder"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/button_green"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>